TC-42 - Fixed bug where the total tags being used was incorrect and exceeding the total tag count

--- a/content-scripts/app/src/app/components/tagCounter/app.tag-counter.html
+++ b/content-scripts/app/src/app/components/tagCounter/app.tag-counter.html
@@ -17,7 +17,7 @@
   </div>
   <div>
     <div class="value">
-      {{(counterService.getTitleTagsCount() + counterService.getDescriptionTagsCount())}} / {{counterService.getTagsCount()}}
+      {{(counterService.getTotalTagsUsedCount())}} / {{counterService.getTagsCount()}}
     </div>
     <div class="label">
       Tags Used
